--- a/languages/buddyx.pot
+++ b/languages/buddyx.pot
@@ -763,7 +763,7 @@ msgid "Settings"
 msgstr ""
 
 #: ../buddyx/inc/Kirki_Option/Component.php:594
-msgid "Header Header Background Color"
+msgid "Header Background Color"
 msgstr ""
 
 #: ../buddyx/inc/Kirki_Option/Component.php:616
